complete basic todo application

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,30 @@
-<h2> {{ name }} </h2>
+@if(showCreateTask) {
+  <app-new-task
+    [userId]="userId"
+    (emitCloseForm)="closeForm()"
+  />
+}
+
+<section id="tasks">
+  <header>
+    <h2>
+      {{ name }}'s Tasks.
+    </h2>
+    <menu>
+      <button (click)="openNewTaskForm()">Add Task</button>
+    </menu>
+  </header>
+
+  <ul>
+    @for (task of selectedUserTasks; track task.id) {
+    <li>
+      <app-task
+        [task]="task"
+      />
+    </li>
+  }
+  </ul>
+
+</section>
+
+
