--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,23 @@
 <app-header />
 <main>
     <ul id="users">
-        @for (user of users; track user.id) {
-          <li>
-            <app-user [user]="user" (select)="onSelectUser($event)"/>
+      @for (user of users; track user.id) {
+        <li>
+            <app-user
+              [user]="user"
+              [selected]="user.id === selectedUserId"
+              (emitUserSelected)="onSelectUser($event)"
+            />
         </li>
-        }
+      }
     </ul>
-  @if(selectedUser) {
-    <app-tasks [name]="selectedUser.name"/>
-  } @else {
-    <p id="fallback">Choose a user to view their assigned tasks.</p>
-  }
+    @if(selectedUser) {
+      <app-tasks
+        [name]="selectedUser.name"
+        [userId]="selectedUser.id"
+      />
+    } @else {
+      <p id="fallback">Choose a user to view their assigned tasks. </p>
+    }
 
 </main>
